fixed footer text overlapping

--- a/css/index.css
+++ b/css/index.css
@@ -650,19 +650,29 @@ table tr:last-child td:last-child {
 }
 
 @media (max-width: 480px) {
+  .personalise-box {
+    margin-left: 1px !important;
+  }
   .personalise-box .text-section {
-    margin: 30px 20px 0 10px;
+    margin: 30px 0px;
     width: 100%;
   }
   .personalise-box .text-section h2 {
     font-size: 25px;
-    font-weight: 500;
     width: 80%;
     margin-bottom: 20px;
     text-align: center !important;
   }
   .personalise-btn {
     margin: 0 auto;
+  }
+  .image-section3 {
+    width: 100% !important;
+    margin: 0;
+  }
+  .image-section3 img {
+    width: 100%;
+    height: 100%;
   }
 }
 
@@ -681,6 +691,10 @@ footer .row {
 
 footer h2 {
   font-size: 50px;
+}
+
+footer h2 a {
+  text-decoration: none;
 }
 
 footer p {
@@ -711,7 +725,7 @@ footer .copy {
 
 @media (max-width: 480px) {
   footer .row {
-    margin: 20px;
+    margin: 0;
   }
   footer h2 {
     font-size: 30px;
